--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #884e23;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header h1 {
+  margin: 1rem;
+  color: #f18b3e;
+}
+
+header input {
+  padding: 1rem;
+  text-decoration: none;
+  border: 2px solid #cb7534;
+  border-radius: 10px;
+  font-size: x-large;
+  color: white;
+  background-color: #a05c29;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
+  display: flex;
+  background-color: floralwhite;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+  color: #ff7b17;
+  padding: 1rem;
+  border: 2px solid teal;
+  border-radius: 10px;
+}
+
+.card h2 {
+  font-size: 2rem;
+}
+
+img {
+  width: 252px;
+}
+
+.price {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.red {
+  color: red;
+  font-size: 2rem;
+}
+
+.green {
+  color: green;
+  font-size: 2rem;
 }
